[gd_scene load_steps=15 format=3 uid="uid://cvno8d4sb6h0s"]

[ext_resource type="Script" path="res://scenes/characters/character.gd" id="1_taq0m"]
[ext_resource type="PackedScene" uid="uid://yg61w87455ho" path="res://scenes/common/finite_state_machine/FSM.tscn" id="3_dcvdl"]
[ext_resource type="Script" path="res://scenes/characters/move_state.gd" id="4_5450c"]
[ext_resource type="Script" path="res://scenes/characters/attack_state.gd" id="5_xi1bt"]
[ext_resource type="Script" path="res://scenes/characters/knockback_state.gd" id="6_y7l8e"]
[ext_resource type="Script" path="res://scenes/characters/idle_state.gd" id="6_yu7tv"]
[ext_resource type="Script" path="res://scenes/characters/Die.gd" id="7_10dt3"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_40amy"]
resource_local_to_scene = true
size = Vector2(192, 178)

[sub_resource type="Animation" id="Animation_gwlt8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_8csog"]
resource_name = "attack"
length = 0.500017
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [9, 10, 11]
}

[sub_resource type="Animation" id="Animation_g7218"]
resource_name = "idle"
length = 0.500017
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_18yy2"]
resource_name = "knockback"
length = 0.500017
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667, 0.333333),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [3, 4, 5]
}

[sub_resource type="Animation" id="Animation_t17j0"]
resource_name = "move"
length = 0.666685
loop_mode = 1
step = 0.166667
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterAnimation/Character:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1667, 0.333333, 0.5001),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 7]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_p6yas"]
_data = {
"RESET": SubResource("Animation_gwlt8"),
"attack": SubResource("Animation_8csog"),
"idle": SubResource("Animation_g7218"),
"knockback": SubResource("Animation_18yy2"),
"move": SubResource("Animation_t17j0")
}

[node name="Character" type="CharacterBody2D" node_paths=PackedStringArray("attack_sprite") groups=["characters"]]
collision_layer = 0
collision_mask = 9
script = ExtResource("1_taq0m")
attack_sprite = NodePath("CharacterAnimation/Character")

[node name="DanmakuHitbox" type="Area2D" parent="."]
unique_name_in_owner = true
collision_layer = 0
collision_mask = 8
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="DanmakuHitbox"]
shape = SubResource("RectangleShape2D_40amy")

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CharacterAnimation" type="Node2D" parent="."]

[node name="Character" type="Sprite2D" parent="CharacterAnimation"]
hframes = 2
vframes = 7
region_rect = Rect2(4, 4, 178, 185)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_p6yas")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_40amy")

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2(96, 64)
target_position = Vector2(40, 0)
collision_mask = 20

[node name="FiniteStateMachine" parent="." instance=ExtResource("3_dcvdl")]
initial_state = NodePath("MoveState")

[node name="MoveState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("4_5450c")

[node name="AttackState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("5_xi1bt")

[node name="IdleState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_yu7tv")

[node name="KnockbackState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("6_y7l8e")

[node name="DieState" type="Node" parent="FiniteStateMachine"]
script = ExtResource("7_10dt3")
